--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
+  <link rel="stylesheet" href="style.css">
   
 </head>
 
 <body>
+<h1 id="holamundo">"¡Hola mundo!"</h1>
+<h2 class="azul" >"¡Hola mundo!"</h2>
+<h3>"¡Hola mundo!"</h3>
+<h4 class="azul">"¡Hola mundo!"</h4>
+<h5>"¡Hola mundo!"</h5>
+
+<br>
+<img src="/8bf770263da6384b1d9a7152673ef662d7ab46a2r1-383-680v2_hq.jpg" alt="">
+<br>
+<p id="rojo">Este es un párrafo con el atributo de ID "rojo".</p>
 
   
   
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+ <script src="/script.js"></script>
 </body>
 
 </html>
